# empty-c-project

./: .gitignore  CMakeLists.txt  README.md
include/: Course.hpp  CourseList.hpp  Graduate.hpp  ManagementSystem.hpp  Person.hpp  Scheduler.hpp  Student.hpp  TaskFactory.hpp  Tasks.hpp  Undergraduate.hpp  my_api.h  yahtzee.h
src/: Course.cpp  CourseList.cpp  Graduate.cpp  ManagementSystem.cpp  Person.cpp  Scheduler.cpp  Student.cpp  TaskFactory.cpp  Tasks.cpp  Undergraduate.cpp  main.c  main.cpp  my_api.c  yahtzee.c
